--- a/packages/SystemUI/res/values/stoned_colors.xml
+++ b/packages/SystemUI/res/values/stoned_colors.xml
@@ -18,6 +18,11 @@
 -->
 <resources>
 
+    <!-- Pixel colors -->
+    <color name="system_primary_color">@*android:color/material_pixel_blue_dark</color>
+    <color name="system_secondary_color">@*android:color/material_pixel_blue_light</color>
+    <color name="system_accent_color">@*android:color/material_pixel_blue_bright</color>
+
     <!-- Custom Navbar Color -->
     <color name="icon_color_back">@android:color/white</color>
     <color name="icon_color_ime_switcher">@android:color/white</color>
